--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/grinchhh/US-GFL-ZM-MOTD">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/grinchhh/US-GFL-ZM-MOTD/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/grinchhh/US-GFL-ZM-MOTD/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
+          <li class="fork"><a href="https://github.com/grinchhh/US-GFL-ZM-MOTD"></a></li>
+          <li class="downloads"><a href="https://github.com/grinchhh/US-GFL-ZM-MOTD/zipball/master"></a></li>
+          <li class="downloads"><a href="https://github.com/grinchhh/US-GFL-ZM-MOTD/tarball/master"></a></li>
+          <li class="title"></li>
         </nav>
       </div><!-- end header -->
 
