--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/grinchhh/US-GFL-ZM-MOTD"></a></li>
-          <li class="downloads"><a href="https://github.com/grinchhh/US-GFL-ZM-MOTD/zipball/master"></a></li>
-          <li class="downloads"><a href="https://github.com/grinchhh/US-GFL-ZM-MOTD/tarball/master"></a></li>
+          <li class="fork"><a href=""></a></li>
+          <li class="downloads"><a href=""></a></li>
+          <li class="downloads"><a href=""></a></li>
           <li class="title"></li>
         </nav>
       </div><!-- end header -->
