--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href=""></a></li>
+          <li class="fork"><a href="http://gflclan.com/index">Home</a></li>
           <li class="downloads"><a href=""></a></li>
           <li class="downloads"><a href=""></a></li>
           <li class="title"></li>
