--- a/index.html
+++ b/index.html
@@ -37,31 +37,82 @@
           <span class="credits left">Project maintained by <a href="https://github.com/grinchhh">grinchhh</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
-
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+General Rules
+No over-using racism.
+Do not impersonate other players (particularly an admin).
+No hacks and/or Bhop scripts. The use of any will warrant a permanent ban.
+No mic/chat spamming or excessive yelling unless an admin says it's all right based on a popular vote.
+Listen to admins; They have Final say.
+No advertising.
+ 
+Zombie Mod Rules
+Do not destroy barricades intentionally.
+Do not abuse !block (e.g using it to get people stuck inside or outside of a certain place).
+Do not Edge (e.g standing on the Edge of a spot close to the humans in order to get infected then infect them).
+Do not Disconnect/Suicide/Switch teams when you're the only Zombie left.
+ 
+Admins
+Please use discretion and allow time for new players to learn the rules.
+Punishments can include warnings, slay, kick, ban (not necessarily in that order).
+If you are punished by an admin, take a deep breath and try to understand what you did before you complain.
+To talk directly to admins, use team chat and type @ before your sentence (i.e. @what's up admins?).
+ 
+Zombie Mod Information
+We are currently debugging the frequent server crashes. Please report any suspicious activity when the server crashes.
+The European Zombie Mod server has poor server performance. This is due to a Linux limitation in CS:GO where the server cannot use over 100% CPU instead of 150% CPU (Windows). We are communicating with Valve about this issue and hope to get it fixed soon.
+ 
+Member Benefits (Free, apply at GFLClan.com)
+Access to Store (tracers, etc..)
+2 credits per minute
+"Citizen" human model.
+ 
+Supporter Benefits ($5.00 monthly)
+Access to Store (tracers, etc..)
+3 credits per minute
+"Citizen" human model.
+"Combine" human model.
+Reserved slot.
+Custom chat tags and colors using !tags.
+ 
+VIP ($50.00 overall)
+Access to Store (tracers, etc..)
+3 credits per minute
+"Combine" human model.
+"Ghoul" zombie model.
+Reserved slot.
+Custom chat tags and colors using !tags.
+ 
+Main Commands (Chat only)
+!zclass - Pick your class for Zombie Escape.
+!ztele - Teleport to spawn.
+!zmarket - Buy weapons, grenades, etc..
+!zspawn - Spawn into the game (use this once you join if the round is still going on).
+!sm <user> - Mute a user from voice chat (client-side mute).
+!rules - Open MOTD through in-game browser.
+* sm_ is for the console. Replace sm_ with "!" or "/" in the chat (without the quotes).
+* ! = shown to everybody
+* / = Hidden from everybody
+ 
+ 
+FAQ
+1. What makes GFL's Zombie Mod server stand out from others?
+A: A number of things makes us stand out. We have good/fair admins. This server is on a machine with a Xeon 1271 @ 3.6 GHz processor. Therefore, the server should withstand 64 players at fairly good server FPS.
+ 
+2. Are there any items in the store?
+A: Yes, tracers, glow colors, and more!
+ 
+3 Are there any other GFL CS:GO servers?
+A: Yes, we have many other servers in CS:GO. This includes: Surf RPG Deathmatch, Surf Timer, Zombie Escape, etc..
+ 
+4 What is the objective of Zombie Mod?
+A: The objective of Zombie Mod is to survive until the round time ends. I would suggest barricading yourself somewhere and try to wait it out by shooting the zombies.
+ 
+ 
+Links
+None.
+Thanks.
+ 
+- Roy and GFL (Games for Life)
       </section>
 
     </div>
