--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="http://gflclan.com/index">Home</a></li>
-          <li class="downloads"><a href=""></a></li>
-          <li class="downloads"><a href=""></a></li>
+          <li class="downloads"><a href="">Rules</a></li>
+          <li class="downloads"><a href="">FAQ</a></li>
           <li class="title"></li>
         </nav>
       </div><!-- end header -->
